--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
+    "@stripe/stripe-js": "^3.4.0",
     "@theme-ui/color": "^0.6.0",
     "gatsby": "^4.7.1",
     "gatsby-plugin-google-analytics": "^4.7.0",
